integrates\fix(front): #793.122 fix org list
- Fix splitItems that shows the org list.
- The splitItems didn't show the scroll when
the list i stoo large.
- The splitItems didn't close when the user click
outside.
- Use event `Blur` on the specific element
to handle the click outside.
- Make a cleanup for the event.


Former-commit-id: 16b14639efef1b7d6f62192e83cd9b3be8fa6f4d

--- a/integrates/front/src/styles/global.css
+++ b/integrates/front/src/styles/global.css
@@ -401,6 +401,8 @@ label {
   margin-top: 5px;
   position: absolute;
   width: 117px;
+  overflow: overlay;
+  max-height: 50vh;
   z-index: 1;
 }
 
